environment: use root-nightly

--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,8 @@
 name: root-agc
 channels:
+  - https://root.cern/download/conda-nightly/latest
   - conda-forge
 dependencies:
   - python>=3.9
-  - root
+  - root-nightly
   - distributed
